--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nuxtjs/pwa": "^3.0.0-0",
     "nuxt": "^2.0.0",
     "vue-fab": "^2.3.1",
+    "vue-js-modal": "^1.3.31",
     "vue-snack": "^0.1.4",
     "vue2-filters": "^0.8.0-beta.2"
   },
